<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_menu_feed"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/feed" />
    <item
        android:id="@+id/bottom_menu_find"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_search_24"
        android:title="@string/find" />
    <item
        android:id="@+id/bottom_menu_chat"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chat" />
    <item
        android:id="@+id/bottom_menu_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />
</menu>