<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white">


    <TextView
        android:id="@+id/createConversaion_LBL_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_conversation"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createConversaion_LBL_inputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:hint="@string/group_name"
        android:textColorHint="@color/hintColor"
        app:boxCornerRadiusBottomEnd="15dp"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary"
        app:startIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createConversaion_LBL_inputEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="textCapSentences"
            android:textColor="@color/colorPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/createConversaion_LBL_selectFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_friends"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginTop="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/createConversaion_LST_friendsList"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createConversaion_LST_submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/submit" />


</LinearLayout>