<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hello_background">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/helloApi_BTN_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/did_i_get_your_name_right"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/helloApi_EDT_firstName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/first_name"
            android:textColorHint="@color/hintColor"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/helloApi_EDT_lastName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/last_name"
            android:textColorHint="@color/hintColor"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/helloApi_BTN_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.193">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/where_are_you_from"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/helloApi_LAY_countrySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edt_border_edges"
            android:dropDownVerticalOffset="40dp"
            android:entries="@array/countries_array"
            android:padding="10dp"
            android:popupBackground="@color/white"
            android:spinnerMode="dropdown"
            android:theme="@style/spinnerTheme" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/helloApi_BTN_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.418">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and_you_are_a"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/helloApi_LAY_genderSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edt_border_edges"
            android:dropDownVerticalOffset="40dp"
            android:entries="@array/gender_list"
            android:padding="10dp"
            android:popupBackground="@color/white"
            android:spinnerMode="dropdown"
            android:theme="@style/spinnerTheme" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/helloApi_BTN_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/half_oval_button"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/continue_str"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />
</androidx.constraintlayout.widget.ConstraintLayout>