<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hello_background">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_question"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/newAccountUsername_BTN_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newAccountUsername_LAY_userNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/username"
        android:textColorHint="@color/hintColor"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/newAccountUsername_BTN_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.118"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newAccountUsername_EDT_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textColor="@color/colorPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newAccountUsername_BTN_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/half_oval_button"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/continue_str"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>