<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hello_background">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/what_games_do_you_play"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/signupGames_BTN_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:padding="3dp"
        app:layout_constraintBottom_toTopOf="@+id/signupGames_LST_gamesList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.mancj.materialsearchbar.MaterialSearchBar
            android:id="@+id/signupGames_LAY_searchBar"
            style="@style/MaterialSearchBarLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:mt_placeholder="@string/enter_name"
            app:mt_placeholderColor="@color/colorSecondary"
            android:theme="@style/SearchBarTheme"
            app:mt_hint="@string/enter_name"
            app:mt_maxSuggestionsCount="10"
            app:mt_speechMode="false" />
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/signupGames_LST_gamesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="12dp"
        android:padding="10dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/signupGames_BTN_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupGames_BTN_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/half_oval_button"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/continue_str"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />


</androidx.constraintlayout.widget.ConstraintLayout>